# hxrizxn-ai

./: .env.example  .gitignore  AGENT_HANDOFF_PROMPT.md  COMPETITIVE_ANALYSIS.md  HANDOFF.md  LICENSE  PRE_PUBLISH_CHECKLIST.md  README.md  SECURITY.md  SUBMISSION.md  agents-league-submission-checklist.md  docker-compose.yml  hxrizxn.md  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_hxrizxn_schema.py
apps/api/app/: __init__.py  main.py  schemas.py
apps/api/app/agents/: assumption.py  composer.py  experiment.py  framing.py  future_self.py  grounding.py  optionality.py  regret.py  ripple.py  risk.py  safety.py  scenario_lattice.py  verifier.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/providers/: knowledge.py  model.py  storage.py
apps/api/app/services/: agent_framework_adapter.py  orchestrator.py  reporting.py  security.py
apps/api/tests/: conftest.py  test_api_flow.py  test_model_provider.py  test_resilience.py  test_safety_and_retrieval.py  test_schemas.py
demo-data/: build-vs-buy-brief.md  current-monthly-budget.csv  customer-concentration-brief.md  decision-science-brief.md  emotional-decision-brief.md  emotional-wellbeing-note.md  engineering-burnout-note.md  engineering-capacity-note.md  enterprise-contract-playbook.md  hiring-headcount-note.md  hiring-scaling-note.md  legal-boundary-brief.md  market-entry-brief.md  minimizing-harm-brief.md  personal-priorities.md  reference-customer-note.md  relationship-honesty-brief.md  relocation-grad-school-note.md  resignation-pros-cons.md  responsibility-reset-note.md  revenue-runway-model.md  social-fallout-note.md  startup-idea-note.md  strategic-bet-note.md  trust-repair-note.md  (+1 more)
(+54 files in other folders)
