[project]
name = "hxrizxn-api"
version = "0.1.0"
description = "FastAPI backend and Microsoft Agent Framework-ready orchestration for Hxrizxn AI."
requires-python = ">=3.12"
dependencies = [
  "agent-framework==1.8.1",
  "alembic==1.18.4",
  "fastapi==0.136.3",
  "httpx==0.28.1",
  "orjson==3.11.5",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "python-dotenv==1.2.1",
  "python-multipart==0.0.32",
  "SQLAlchemy==2.0.50",
  "uvicorn[standard]==0.49.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "ruff==0.14.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

